panning still a bit off. website titles on

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>the mandelbrot set</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>M-SET FISH</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    <p>theoretically, you can zoom and pan with the spacebar and arrow keys.</p>
+				<p>in reality, it's so slow that every action requires about 5min of waiting so it's relaly not worth it</p>
 	    </footer>
 	</body>
 </html>
