--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		    </section>
 	    <footer>
 		    <p>theoretically, you can zoom and pan with the spacebar and arrow keys.</p>
-				<p>in reality, it's so slow that every action requires about 5min of waiting so it's relaly not worth it</p>
+				<p>in reality, it's so slow that every action requires about 5min of waiting so it's really not worth it</p>
 	    </footer>
 	</body>
 </html>
