hopefully fixed double problem

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>M-SET FISH</h1>
 		</header>
 			<section id="content">
-				<canvas id="test" data-processing-sources="test.pde">
+				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
